# Projeto-web-chat

./: README.md  pyproject.toml
Server Socket/: client-socket.py
Server WebSocket/Client App/: GUI.ui  app.py  display.py
Server WebSocket/Client App Teste/: app.py  display.py  web_scraper_key.py
Server WebSocket/Server/: procfile  server-websocket.py
Server WebSocket/client/: client_websocket_consume.py  client_websocket_produce.py
server/: host.py
