[tool.poetry]
name = "projeto-web-chat"
version = "0.1.0"
description = ""
authors = ["Thi <tiagoqueirozgoncalves100@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
websockets = "^10.3"
beautifulsoup4 = "^4.11.1"
aiohttp = "^3.8.1"
requests = "^2.28.1"
PyQt5 = "^5.15.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
